--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,7 @@
-* {
-    box-sizing: border-box;
-}
-*:before, *:after {
-        box-sizing: border-box;
+*, div{
+	margin:0;
+	padding:0;
+	box-sizing:border-box;
 }
 
 html {
@@ -24,6 +23,7 @@ nav {
     background-color: #C9CACC;
 
 }
+
 nav a {
     font-family: Arial;
     font-size: 12px;
@@ -35,9 +35,6 @@ nav li:hover {
     background-color: #767676;
 }
 
-nav li a:current {
-    background-color: black;
-}
 
 .padding-0{
     padding-right:0 !important;
@@ -48,11 +45,25 @@ nav li a:current {
     background-color: #C9CACC; 
 }
 
+.aktiv {
+    background-color: black !important;
+}
+
+.aktiv a{
+    color: white !important;
+}
+
 p {
     font-family: Arial;
     font-size: 10px;
     color: #000000;
 }
+
+h6 a {
+    text-decoration: none !important;
+    color: black;
+}
+
 
 h1 {
     display: inline-block;
@@ -80,10 +91,12 @@ h6 {
     border-width:10px !important;
 }
 
-/* hr{
-    width: 100%;
+hr{
     color: #EDEDED;
-} */
+    border: 0;
+    margin: 30px -20px 20px;
+    border-top: 1px solid #c9c7c7;
+}
 
 .roundImg {
     border-radius: 1.5em 1.5em 0 0;
@@ -104,8 +117,10 @@ footer {
     color: #A4A4A4;
     border-radius: 0 0 1.5em 1.5em !important;  
     width: 100%;
-    position: absolute;
-    bottom: 0;
+    text-align: center;
+    clear: both !important;
+    content: ""!important;
+    display: block!important;
 }
 
 footer p {
@@ -134,8 +149,24 @@ main img {
     padding-left: 190px;
 }
 
+.padding-l3 {
+    padding-left: 220px;
+}
+
+.padding-l4 {
+    padding-left: 90px !important;
+}
+
 .padding-t1 {
-    padding-top: 30px;
+    padding-top: 30px !important;
+}
+
+.padding-t2 {
+    padding-top: 41px !important;
+}
+
+.margin-t1 {
+    margin-top: 50px !important;
 }
 
 .padding-b1 {
@@ -148,4 +179,54 @@ div {
 
 imgRight {
     float: right !important;
+}
+
+.poss-tr {
+    position: relative;
+}
+
+.onBanner {
+position: absolute;
+   top: -120px;
+   right: 40px;
+}
+
+.vl {
+    border-left: 2px solid lightgrey;
+    height: 345px;
+    margin-top: 70px;
+}
+
+.vr {
+    width : 1px ;
+    height : 100px ;
+    background-color: lightgrey;
+}
+
+.alignCenter {
+    text-align: center !important;
+}
+
+.alignImg {
+    margin: auto;
+}
+
+li {
+    list-style: none;
+    text-decoration: none !important;
+}
+
+li a{
+    text-decoration: none !important;
+}
+
+.clear_fix {
+    clear: both !important;
+    content: ""!important;
+    display: block!important;
+}
+
+span a{
+    color: #FF9E41 !important;
+    text-decoration: underline;
 }
