--- a/views/pages/cykler.ejs
+++ b/views/pages/cykler.ejs
@@ -22,7 +22,48 @@
                 </header>
 
                 <main>
-                    <% include ../partials/mainCykler.ejs %>
+                    <div class="col-md-12 m-0 p-0">
+                        <section class="col-md-10 d-block">
+                            <div class="float-left">
+
+                                <h3 class="pl-3 pt-3 mb-1">Cykler</h3>
+
+                                <hr class="mb-3 mt-3">
+                                <% kategori.forEach(kat => { %>
+                                    <div class="col-md-3 ml-5 mt-5 alignCenter">
+                                        <h6>                                            
+                                            <a href="/alleKategori/<%= kat.kategori_id %>">
+                                                <%= kat.kategori_navn %>
+                                            </a>
+                                        </h6>
+                                        <img src="/img/Cykeltyper/<%= kat.kategori_billede %>" alt="Cykel Billede" class="w-75">
+                                    </div>
+                                <% }) %>
+
+                            </div>
+
+
+                        </section>
+
+                        <div class="vl float-left ml-2"></div>
+
+                        <div class="col-md-2 float-left p-1 pl-3 pr-3">
+                            <h3 class="pl-3 pt-3">Tilbud</h3>
+                            <hr class="m-2">
+                            <% produkter.forEach(produkt => { %>
+                                <div class="border mb-2 alignCenter">
+                                    <p class="mt-1">
+                                        <%= produkt.tilbud_navn %>
+                                    </p>
+                                    <img src="/img/Cykler/<%= produkt.tilbud_billede %>" alt="Cykel Billede" class="w-50">
+
+                                    <p class="mb-1">Nu kun
+                                        <%= produkt.tilbud_pris %> Kr.</p>
+                                </div>
+                                <% }) %>
+                        </div>
+
+                    </div>
                 </main>
 
 
